Fix nav, header and footer alignment and colours

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,21 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
+/* General layout */
+
+.text-right {
+    text-align: right;
+}
+
+/* Navigation layout */
+
+nav {
+    color: black;
+    background-color: lightblue;
+}
+
+/* Header section */
+
 .heading {
     min-height: 240px;
     background-color: lightgray;
@@ -13,29 +28,38 @@ body {
 
 .heading-title {
     font-weight: 100;
-    font-size: 48px;
 }
 
 .heading-subtitle {
     font-weight: 200;
-    font-size: 36px;
 }
 
 .inline-block{
     display: inline-block;
 }
 
+/* About me section */
+
+.main-image {
+    border-radius: 50%;
+    width:200px;
+    height: 200px;
+}
+
 /* Footer */
 
 footer {
-    background-color: lightgrey;
+    background-color: lightblue;
     min-height:20px;
     margin: 0;
-    color: white;
-}
-
-.social-networks {
-    padding-bottom: 15px;
+    color: black;
+	padding: 1em;
+	text-align: center;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+	z-index: 3;
 }
 
 /* Taken from Code Institute lesson https://learn.codeinstitute.net/courses/course-v1:codeinstitute+FE+2017_T3/courseware/616289d66b5641a3808cc43e53842695/b51f7b8b815c4bcd9979d2281b6d97a9/?child=last */
@@ -56,9 +80,41 @@ footer {
 }
 
 .social-networks li a i:hover {
-    background-color: lightblue;
+    background-color: black;
 }
 
 .list-inline-item:not(:last-child) {
     margin: 0;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 480px) {
+	.heading-title {
+		font-size: 24px;
+	}
+
+    .heading-subtitle {
+        font-size: 18px;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 600px) {
+	.heading-title {
+		font-size: 36px;
+	}
+
+    .heading-subtitle {
+        font-size: 28px;
+    }
+}
+
+@media screen and (min-width: 601px) {
+	.heading-title {
+		font-size: 48px;
+	}
+
+    .heading-subtitle {
+        font-size: 36px;
+    }
 }
